Add user get and update
