# docs/swagger.yaml
@@ -26,6 +26,26 @@ definitions:
       token:
         type: string
     type: object
+  model.User:
+    properties:
+      created_at:
+        type: string
+      id:
+        type: string
+      name:
+        type: string
+      timezone:
+        type: string
+      updated_at:
+        type: string
+    type: object
+  request.UpdateUserRequest:
+    properties:
+      name:
+        type: string
+      timezone:
+        type: string
+    type: object
 host: localhost:8080
 info:
   contact:
@@ -36,6 +56,58 @@ info:
   title: Falcon API
   version: "1.0"
 paths:
+  /api/v1/users/me:
+    get:
+      consumes:
+      - application/json
+      description: Get user profile
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.User'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/handler.APIError'
+      security:
+      - Bearer: []
+      summary: Get user profile
+      tags:
+      - user
+    put:
+      consumes:
+      - application/json
+      description: Update user profile
+      parameters:
+      - description: User profile
+        in: body
+        name: req
+        required: true
+        schema:
+          $ref: '#/definitions/request.UpdateUserRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.User'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handler.APIError'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/handler.APIError'
+      security:
+      - Bearer: []
+      summary: Update user profile
+      tags:
+      - user
   /auth/protected:
     get:
       consumes:
